--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,37 @@
 *{
     background-color: #324AB2;
-    color : #C71585;
+    color : #FFF;
+    font-family: "Gill Sans", sans-serif;
+    margin:0;
+    padding:0;
 }
 
 #case{
-    height: 100%;
+    height: 100vh;
+    max-height: 100vh;
     width: 100%;
+    max-width: 200vh;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
 }
-
+#me{
+    font-size: 7vh;
+    font-weight: bold;
+}
 #links{
     display: flex;
     flex-direction: row;
+    text-decoration: none;
+}
+
+#links > a {
+    font-size: 3vh;
+    margin-right: 2vh;
+    text-decoration: none;
+}
+
+#links > a:hover {
+    box-shadow: 3px 3px 2px black ;
 }
