--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family:Bebas_Neue ;
-    src: url(../font/Bebas_Neue/Bebas_Neue/BebasNeue-Regular.ttf);
+    font-family:ScienceGothic;
+    src: url(../font/Science_Gothic/static/ScienceGothic-Regular.ttf);
 }
 
 *{
     color : #FFF;
-    font-family: Bebas_Neue;
+    font-family: ScienceGothic;
     margin:0;
     padding:0;
 }
@@ -277,7 +277,7 @@ header{
 .titreComp{
     text-decoration:underline overline;
     font-size: 3vh;
-    margin-bottom: 5vh;
+    margin-top: 7vh;
 }
 /* ----------- EXPÉRIENCES ----------- */
 #experience {
@@ -338,7 +338,7 @@ header{
 .wrapPrimaire4 {
     flex: 0 0 calc((100% - 6vh) / 3); /* 3 cartes + 2 gaps */
     min-width: 280px;
-    max-width: 400px;
+    max-width: 450px;
     height: 100%;
     border-radius: 15px;
     border: 2px solid #FFF;
@@ -398,7 +398,7 @@ header{
 .wrapBenevolat {
     position: relative;
     width: 100%;
-    height: 70vh;
+    height: 90vh;
     overflow: hidden;
     display: flex;
     align-items: center;
@@ -446,9 +446,7 @@ header{
     overflow-y: auto;
 }
 
-.benevolat-body > p {
-    text-decoration: underline;
-}
+
 .benevolat-body > ul {
     margin-bottom: 3vh;
     margin-top: 1vh;
@@ -476,19 +474,23 @@ header{
 }
 
 
-/* -----------LOISIR----------------- */
-#loisir{
-    min-height: 100vh;
-    width: 100%;
+
+/* FOOTER */
+footer {
     display: flex;
-    flex-direction: column;
-    padding: 5vh 0;
-    font-size: 2.5vh;
+    justify-content: center; 
+    align-items: center;
+    position: relative;      
+    width: 100%;
+    padding: 20px 0;
 }
 
-/* footer */
-footer{
-    text-align: center;
+
+#socialNetwork {
+    position: absolute;
+    right: 20px;
+    display: flex;
+    gap: 15px;
 }
 
 /* ----------- RESPONSIVE ----------- */
